# osrsdiff

./: .env.example  .gitignore  .mise.toml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  logging.conf  pyproject.toml
.cursor/rules/: fastapi-application-structure.mdc  fastapi.mdc  python.mdc  react.mdc  tailwind.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  release.yml  security.yml
.kiro/steering/: product.md  structure.md  tech.md
app/: config.py  exceptions.py  main.py
app/api/: auth.py  auth_endpoints.py  auth_utils.py  history.py  players.py  router.py  statistics.py  system.py
app/models/: __init__.py  base.py  hiscore.py  player.py  player_summary.py  player_type.py  setting.py  task_execution.py  user.py
app/services/: __init__.py  auth.py  history.py  osrs_api.py  player.py  schedule_maintenance.py  scheduler.py  setting.py  settings_cache.py  startup.py  statistics.py  summary.py  token_blacklist.py  user.py
app/utils/: common.py  migrations.py  template_loader.py
app/workers/: __init__.py  fetch.py  main.py  maintenance.py  middleware.py  schedule_maintenance.py  scheduler.py  scheduler_config.py  summaries.py  tasks.py
docs/: DEPLOYMENT.md  SCHEDULER.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
migrations/: README.md  env.py
migrations/versions/: 0cd763c34e05_add_player_summaries_table.py  1adcb6c751b1_merge_settings_and_player_summaries_.py  23d56873f1dd_add_game_mode_column_to_players_table.py  3ada2832d7c7_add_task_executions_table.py  483426e3965e_add_openai_metadata_to_player_summaries.py  a1b2c3d4e5f6_add_schedule_id_column_to_players_table.py  a7b8c9d0e1f2_add_settings_table.py  b8c9d0e1f2a3_add_display_name_to_settings.py  c9d0e1f2a3b4_add_setting_type_and_allowed_values.py  d0e1f2a3b4c5_add_is_secret_to_settings.py  e1f2a3b4c5d6_preserve_player_summaries_on_delete.py  f065a88c4a27_initial_migration_create_players_and_.py  f2a3b4c5d6e7_add_game_mode_to_players.py
scripts/: README_scheduler_migration.md  deploy_scheduler.py  init-db.sql  inject_fake_history.py  manage_db.py  migrate_to_taskiq_scheduler.py  run_scheduler.py  schedule_maintenance.py  test_deduplication.py  test_taskiq.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  auth.py  auth_endpoints.py  history.py  players.py  statistics.py  system.py
src/models/: __init__.py  base.py  hiscore.py  player.py  user.py
src/services/: __init__.py  auth.py  history.py  osrs_api.py  player.py  schedule_maintenance.py  scheduler.py  startup.py  statistics.py  token_blacklist.py  user.py
src/workers/: __init__.py  fetch.py  main.py  schedule_maintenance.py  scheduler.py  scheduler_config.py  task_config.py  tasks.py
templates/: README.md
templates/summary/: system_prompt.j2  user_prompt.j2
tests/: __init__.py  conftest.py  test_exceptions.py
tests/api/: test_auth.py  test_auth_endpoints.py  test_history.py  test_players.py  test_router.py  test_statistics.py  test_system.py
tests/models/: __init__.py  test_base.py  test_hiscore.py  test_player.py  test_player_summary.py  test_setting.py  test_user.py  (+1 more)
(+207 files in other folders)
